# pyembc

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
emb/: __init__.py  _emb.py
pyembc/: _pyembc.py
test/: test_emb.py  test_pyembc.py
